# pokerole-discord-bot

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
docs/: privacy_policy.md  terms_of_service.md
migrations/: 20240907075531_guild_rules.sql  20240909084352_muti_data.sql  20250405185828_application_emoji.sql  20250524095652_cleanup_names.sql
src/: data.rs  database_helpers.rs  database_mocks.rs  emoji.rs  enums.rs  errors.rs  helpers.rs  main.rs
src/commands/: ability.rs  about.rs  area_attack_roll.rs  attack_roll.rs  autocompletion.rs  calculate_hp_damage_modifier.rs  create_emojis.rs  create_role_reaction_post.rs  edit_rules.rs  efficiency.rs  encounter.rs  item.rs  learns.rs  metronome.rs  mod.rs  move.rs  nature.rs  pin_or_unpin.rs  player_info.rs  potion.rs  prune_emojis.rs  roll.rs  rule.rs  say.rs  scale.rs  select_random.rs  server_stats.rs  setting_time_offset.rs  setup_guild.rs  stats.rs  status.rs  store_gm_experience.rs  successive_action_roll.rs  timestamp.rs  use_gm_experience.rs  weather.rs
src/commands/character_commands/: character_sheet.rs  create_character.rs  create_character_post.rs  edit_character.rs  give_money.rs  mod.rs  reset_character_stats.rs  (+12 more)
src/events/: backups.rs  button_interaction.rs  guild_member_removal.rs  handle_emoji_reaction.rs  mod.rs  monthly_reset.rs  role_reaction.rs  select_menu_interaction.rs  status_messages.rs  weekly_reset.rs
src/game_data/: ability.rs  item.rs  mod.rs  move.rs  nature.rs  pokemon.rs  potion.rs  status_effect.rs  weather.rs
src/shared/: action_log.rs  cache.rs  character.rs  character_stats.rs  clunky_stuff.rs  constants.rs  data.rs  dice_rolls.rs  emoji.rs  enums.rs  errors.rs  helpers.rs  metronome.rs  mod.rs  permissions.rs  retire_character.rs
(+71 files in other folders)
