[package]
name = "pokerole-discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.12.2", default-features = false, features = ["builder", "cache"] }
poise = "0.6.1"
tokio = { version = "1.41.0", features = ["rt-multi-thread"] }
csv = "1.3.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
serde_with = "3.11.0"
futures = { version = "0.3.31", default-features = false }
log = "0.4.22"
env_logger = "0.11.5"
rand = { version = "0.8.5", features = ["alloc"] }
strum = "0.26.3"
strum_macros = "0.26.4"
chrono = "0.4.38"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
regex = "1.11.1"
more-asserts = "0.3.1"
image = "0.25.4"
